swagger: missed create application endpoint
